--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
-        "@mui/material": "^5.15.1"
+        "@mui/material": "^5.15.1",
+        "laravel-echo": "^1.15.3",
+        "pusher-js": "^8.4.0-rc2",
+        "react-router-dom": "^6.21.2"
     }
 }
